--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+.idea/
+
+
 
 # Created by https://www.gitignore.io/api/csharp,jetbrains,visualstudio
 # Edit at https://www.gitignore.io/?templates=csharp,jetbrains,visualstudio
