--- a/src/Saunter/Saunter.csproj
+++ b/src/Saunter/Saunter.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="4.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="AsyncApiSchema\Utils" />
+  </ItemGroup>
+
 </Project>
