--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '3.0.100' # SDK Version to use.
-    - name: build
+    - name: Run dotnet build
       run: dotnet build
-    - name: test
+    - name: Run dotnet test
       run: dotnet test --no-build
