Fix CI evaluation of master branch

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,7 @@ jobs:
     - name: Create Nuget package
       run: dotnet pack ./src/Saunter/Saunter.csproj --configuration Release --version-suffix "$(git rev-list --count HEAD)+$(git rev-parse --short=10 HEAD)" --output ./build
     - name: Push Nuget package to Github Package Registry
-      if: github.ref == 'master'
+      if: github.ref == 'refs/heads/master'
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }} 
       run: dotnet nuget push ./build/*.nupkg --api-key $GITHUB_TOKEN
