--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,5 +22,5 @@ jobs:
       if: github.ref == 'refs/heads/master'
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }} 
-      run: dotnet nuget push ./build/*.nupkg --api-key $GITHUB_TOKEN
+      run: dotnet nuget push ./build/*.nupkg --api-key $NUGET_API_KEY
 
