git ignore autogenerated file

--- a/.gitignore
+++ b/.gitignore
@@ -594,3 +594,4 @@ fabric.properties
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 
 # End of https://www.gitignore.io/api/csharp,jetbrains,visualstudio
+/examples/StreetlightsAPI/Properties/launchSettings.json
