--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,10 @@
 name: CI
 
-on: [push]
+on:
+  push:
+    tags:
+      - 'v*.*.*' # e.g. v0.1.0
+  pull_request:
 
 jobs:
   build:
@@ -9,6 +13,8 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
+    - name: Set version
+      run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/tags/v}
     - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '3.0.100' # SDK Version to use.
@@ -17,10 +23,10 @@ jobs:
     - name: Run dotnet test
       run: dotnet test --no-build
     - name: Create Nuget package
-      run: dotnet pack ./src/Saunter/Saunter.csproj --configuration Release --version-suffix "$(git rev-list --count HEAD)+$(git rev-parse --short=10 HEAD)" --output ./build
-    - name: Push Nuget package to Nuget.org
-      if: github.ref == 'refs/heads/master'
-      env:
-        NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }} 
-      run: dotnet nuget push ./build/*.nupkg --api-key $NUGET_API_KEY --source "https://api.nuget.org/v3/index.json"
+      run: dotnet pack ./src/Saunter/Saunter.csproj --configuration Release --version-suffix "+$(git rev-parse --short=10 HEAD)" -p:PackageVersion="$RELEASE_VERSION" --output ./build
+    # - name: Push Nuget package to Nuget.org
+    #   if: github.ref == 'refs/heads/master'
+    #   env:
+    #     NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }} 
+    #   run: dotnet nuget push ./build/*.nupkg --api-key $NUGET_API_KEY --source "https://api.nuget.org/v3/index.json"
 
