--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,10 +1,9 @@
+# Note: ci.yaml and release.yaml have some similar steps
+#       If updating dotnet-version, set in both.
+
 name: CI
 
-on:
-  push:
-    tags:
-      - 'v*.*.*' # e.g. v0.1.0
-  pull_request:
+on: [push]
 
 jobs:
   build:
@@ -13,20 +12,10 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
-    - name: Set version
-      run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/tags/v}
     - uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '3.0.100' # SDK Version to use.
+        dotnet-version: '3.1.x' # SDK Version to use; x will use the latest version of the 3.1 channel
     - name: Run dotnet build
       run: dotnet build --configuration Debug
     - name: Run dotnet test
       run: dotnet test --no-build
-    - name: Create Nuget package
-      run: dotnet pack ./src/Saunter/Saunter.csproj --configuration Release --version-suffix "+$(git rev-parse --short=10 HEAD)" -p:PackageVersion="$RELEASE_VERSION" --output ./build
-    # - name: Push Nuget package to Nuget.org
-    #   if: github.ref == 'refs/heads/master'
-    #   env:
-    #     NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }} 
-    #   run: dotnet nuget push ./build/*.nupkg --api-key $NUGET_API_KEY --source "https://api.nuget.org/v3/index.json"
-
