--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,9 +29,9 @@ jobs:
       run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/tags/v} 
     - name: Create Nuget package
       run: dotnet pack ./src/Saunter/Saunter.csproj --configuration Release -p:Version="$RELEASE_VERSION" --output ./build
-    # - name: Push Nuget package to Nuget.org
-    #   env:
-    #     NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }} 
-    #   run: dotnet nuget push ./build/*.nupkg --api-key $NUGET_API_KEY --source "https://api.nuget.org/v3/index.json"
+    - name: Push Nuget package to Nuget.org
+      env:
+        NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }} 
+      run: dotnet nuget push ./build/*.nupkg --api-key $NUGET_API_KEY --source "https://api.nuget.org/v3/index.json"
       
       
