--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -27,9 +27,11 @@ jobs:
     - name: Set version
       # Gets the numeric version from a tag (e.g. v1.2.3 -> 1.2.3)
       run: echo ::set-env name=RELEASE_VERSION::${GITHUB_REF#refs/tags/v} 
-    - name: Create Nuget package
+    - name: Create Saunter Nuget package
       run: dotnet pack ./src/Saunter/Saunter.csproj --configuration Release -p:Version="$RELEASE_VERSION" --output ./build
-    - name: Push Nuget package to Nuget.org
+    - name: Create Saunter NewtonsoftJson Nuget package
+      run: dotnet pack ./src/Saunter.NewtonsoftJson/Saunter.NewtonsoftJson.csproj --configuration Release -p:Version="$RELEASE_VERSION" --output ./build
+    - name: Push Nuget packages to Nuget.org
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }} 
       run: dotnet nuget push ./build/*.nupkg --api-key $NUGET_API_KEY --source "https://api.nuget.org/v3/index.json"
