--- a/src/Saunter/Saunter.csproj
+++ b/src/Saunter/Saunter.csproj
@@ -30,7 +30,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.0.0" />
-    <PackageReference Include="Namotion.Reflection" Version="1.0.6" />
+    <PackageReference Include="NJsonSchema" Version="10.3.1" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
 
     <!-- Development Dependencies -->
