--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v1
     - uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '3.1.x' # SDK Version to use; x will use the latest version of the 3.1 channel
+        dotnet-version: '5.x' # SDK Version to use; x will use the latest version of the channel
     - name: Run dotnet build
       run: dotnet build --configuration Debug
     - name: Run dotnet test
