--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,11 @@
 
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - master
+  pull_request:
 
 jobs:
   build:
@@ -14,7 +18,7 @@ jobs:
     - uses: actions/checkout@v1
     - uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '5.x' # SDK Version to use; x will use the latest version of the channel
+        dotnet-version: '5.0.x' # SDK Version to use; x will use the latest version of the channel
     - name: Run dotnet build
       run: dotnet build --configuration Debug
     - name: Run dotnet test
