--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,11 +15,16 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
+
+    - uses: actions/setup-node@v2
+      with:
+        node-version: lts/*
     - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '5.0.x' # SDK Version to use; x will use the latest version of the channel
-    - name: Run dotnet build
+
+    - name: Run dotnet build -maxcpucount:1
       run: dotnet build --configuration Debug
     - name: Run dotnet test
       run: dotnet test --no-build
