--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -18,7 +18,7 @@ jobs:
 
     - uses: actions/setup-node@v2
       with:
-        node-version: lts/*
+        node-version: '16'
     - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '5.0.x' # SDK Version to use; x will use the latest version of the channel
