--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,11 +15,25 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
+
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '16'
     - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '5.0.x' # SDK Version to use; x will use the latest version of the channel
+
+    - name: Run NPM install
+      run: npm install
+      working-directory: ./src/Saunter/UI
     - name: Run dotnet build
-      run: dotnet build --configuration Debug
+      run: dotnet build --configuration Debug -maxcpucount:1
     - name: Run dotnet test
       run: dotnet test --no-build
+
+    # Below steps run only on CI, not release
+    - uses: actions/upload-artifact@v2
+      with:
+        name: saunter-bin
+        path: ./src/Saunter/bin
