changed implementation to only require one middleware

--- a/src/Saunter/Saunter.csproj
+++ b/src/Saunter/Saunter.csproj
@@ -56,4 +56,12 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
+
+    <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+        <PackageReference Include="Microsoft.AspnetCore.Http" Version="2.0.0" />
+        <PackageReference Include="Microsoft.AspnetCore.StaticFiles" Version="2.0.0" />
+        <PackageReference Include="Microsoft.AspnetCore.Hosting" Version="2.0.0" />
+        <PackageReference Include="Microsoft.AspnetCore.Routing" Version="2.0.0" />
+        <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="2.0.0" />
+    </ItemGroup>
 </Project>
