--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -26,9 +26,9 @@ jobs:
 
     - name: Run NPM install
       run: npm install
-      working-directory: ./src/Saunter/UI
+      working-directory: ./src/Saunter.UI
     - name: Run dotnet build
-      run: dotnet build --configuration Debug -maxcpucount:1
+      run: dotnet build --configuration Debug
     - name: Run dotnet test
       run: dotnet test --no-build
 
