--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,9 +25,9 @@ jobs:
 
     - name: Run NPM install
       run: npm install
-      working-directory: ./src/Saunter/UI
+      working-directory: ./src/Saunter.UI
     - name: Run dotnet build
-      run: dotnet build --configuration Debug -maxcpucount:1
+      run: dotnet build --configuration Debug
     - name: Run dotnet test
       run: dotnet test --no-build
 
@@ -36,7 +36,7 @@ jobs:
       # Gets the numeric version from a tag (e.g. v1.2.3 -> 1.2.3)
       run: echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
     - name: Create Nuget package
-      run: dotnet pack ./src/Saunter/Saunter.csproj --configuration Release -p:Version="$RELEASE_VERSION" --output ./build -maxcpucount:1
+      run: dotnet pack ./src/Saunter/Saunter.csproj --configuration Release -p:Version="$RELEASE_VERSION" --output ./build
     - name: Push Nuget package to Nuget.org
       env:
         NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }} 
