--- a/src/Saunter/Saunter.csproj
+++ b/src/Saunter/Saunter.csproj
@@ -23,25 +23,15 @@
     <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
   </PropertyGroup>
 
-  <ItemGroup>
-    <Compile Remove="UI\node_modules\**" />
-    <None Remove="UI\node_modules\**" />
-  </ItemGroup>
-
+ 
   <ItemGroup>
     <EmbeddedResource Include="UI/index.html" />
-    <EmbeddedResource Include="UI/node_modules/@asyncapi/react-component/browser/standalone/index.js" LogicalName="Saunter.UI.index.js" Condition="Exists('UI/node_modules')" />
-    <EmbeddedResource Include="UI/node_modules/@asyncapi/react-component/styles/default.min.css" LogicalName="Saunter.UI.default.min.css" Condition="Exists('UI/node_modules')" />
+
+    <!-- Note: `npm install` must be run from the src/Saunter.UI directory before building the project to correctly include the UI resources -->
+    <!--       this is done automatically in the CI pipeline, but may be skipped when running locally to allow debugging without nodejs      -->
+    <EmbeddedResource Include="../Saunter.UI/node_modules/@asyncapi/react-component/browser/standalone/index.js" LogicalName="Saunter.UI.index.js" Condition="Exists('../Saunter.UI/node_modules')" />
+    <EmbeddedResource Include="../Saunter.UI/node_modules/@asyncapi/react-component/styles/default.min.css" LogicalName="Saunter.UI.default.min.css" Condition="Exists('../Saunter.UI/node_modules')" />
   </ItemGroup>
-
-  <Target Name="NpmInstall" BeforeTargets="Build" Inputs="UI/package.json" Outputs="UI/node_modules/.install-stamp">
-    <Exec Command="npm install" EnvironmentVariables="PATH=$(Path.Replace(';', '%3B'))" ContinueOnError="true" WorkingDirectory="UI">
-      <Output TaskParameter="ExitCode" PropertyName="ErrorCode" />
-    </Exec>
-    <Touch Files="UI/node_modules/.install-stamp" AlwaysCreate="true" />
-    <Error Condition="'$(ErrorCode)' != '0'" Text="Node.js/npm is required to build this project. To continue, please install Node.js from https://nodejs.org/ or Visual Studio Installer, and then restart your command prompt or IDE." />
-  </Target>
-
 
   <ItemGroup>
     <None Include="..\..\assets\logo.png" Pack="true" PackagePath="\" />
@@ -61,12 +51,11 @@
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
-
-    <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-        <PackageReference Include="Microsoft.AspnetCore.Http" Version="2.0.0" />
-        <PackageReference Include="Microsoft.AspnetCore.StaticFiles" Version="2.0.0" />
-        <PackageReference Include="Microsoft.AspnetCore.Hosting" Version="2.0.0" />
-        <PackageReference Include="Microsoft.AspnetCore.Routing" Version="2.0.0" />
-        <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="2.0.0" />
-    </ItemGroup>
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
+    <PackageReference Include="Microsoft.AspnetCore.Http" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspnetCore.StaticFiles" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspnetCore.Hosting" Version="2.0.0" />
+    <PackageReference Include="Microsoft.AspnetCore.Routing" Version="2.0.0" />
+    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="2.0.0" />
+  </ItemGroup>
 </Project>
