Changed Endpoint option to ReveresProxyBaseUrl option

--- a/examples/StreetlightsAPI/docker-compose.yml
+++ b/examples/StreetlightsAPI/docker-compose.yml
@@ -5,11 +5,15 @@ services:
     build:
       context: .
     restart: always
+    environment:
+      - PATH_BASE=/service-a
 
   service-b:
     build:
       context: .
     restart: always
+    environment:
+      - PATH_BASE=/service-b
 
   nginx:
     restart: always
