--- a/src/Saunter/Saunter.csproj
+++ b/src/Saunter/Saunter.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp3.1;net5.0;netstandard2.0</TargetFrameworks>
+    <TargetFramework>net6.0</TargetFramework>
     <IsPackable>true</IsPackable>
     <PackageId>Saunter</PackageId>
     <Title>Saunter</Title>
@@ -45,23 +45,20 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="3.0.0" />
-    <PackageReference Include="NJsonSchema" Version="10.6.2" />
+    <PackageReference Include="NJsonSchema" Version="10.7.2" />
 
     <!-- Development Dependencies -->
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' != 'netstandard2.0'">
+  <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0'">
-    <PackageReference Include="Microsoft.AspnetCore.Http" Version="2.0.0" />
-    <PackageReference Include="Microsoft.AspnetCore.StaticFiles" Version="2.0.0" />
-    <PackageReference Include="Microsoft.AspnetCore.Hosting" Version="2.0.0" />
-    <PackageReference Include="Microsoft.AspnetCore.Routing" Version="2.0.0" />
-    <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="2.0.0" />
+  <ItemGroup>
+    <None Include="..\Saunter.UI\package.json" CopyToOutputDirectory="Never" CopyToPublishDirectory="Never">
+      <Link>UI\package.json</Link>
+    </None>
   </ItemGroup>
+  
 </Project>
