--- a/src/Saunter.UI/package.json
+++ b/src/Saunter.UI/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@asyncapi/react-component": "^1.0.0-next.48"
+    "@asyncapi/react-component": "^1.2.11"
   }
 }
