--- a/test/Saunter.Tests.MarkerTypeTests/Saunter.Tests.MarkerTypeTests.csproj
+++ b/test/Saunter.Tests.MarkerTypeTests/Saunter.Tests.MarkerTypeTests.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\Saunter\Saunter.csproj" />
+    <ProjectReference Include="..\..\src\Saunter\Saunter.csproj" />
   </ItemGroup>
 
 </Project>
