--- a/test/Saunter.Tests/Saunter.Tests.csproj
+++ b/test/Saunter.Tests/Saunter.Tests.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Saunter.Tests.MarkerTypeTests\Saunter.Tests.MarkerTypeTests.csproj" />
+    <ProjectReference Include="..\Saunter.Tests.MarkerTypeTests\Saunter.Tests.MarkerTypeTests.csproj" />
     <ProjectReference Include="..\..\src\Saunter\Saunter.csproj" />
   </ItemGroup>
 
