--- a/SourceGenSandbox/AsyncApiLibrary/AsyncApiLibrary.csproj
+++ b/SourceGenSandbox/AsyncApiLibrary/AsyncApiLibrary.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AsyncAPI.NET" Version="5.0.0" />
+    <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.15" />
   </ItemGroup>
 
 </Project>
