--- a/SourceGenSandbox/ConsoleApp1/ConsoleApp1.csproj
+++ b/SourceGenSandbox/ConsoleApp1/ConsoleApp1.csproj
@@ -8,7 +8,10 @@
   </PropertyGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\IncrGenerator\IncrGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false"/>
+		<ProjectReference Include="..\AsyncApiLibrary\AsyncApiLibrary.csproj" />
+		<ProjectReference Include="..\IncrGenerator\IncrGenerator.csproj" 
+						  OutputItemType="Analyzer" 
+						  ReferenceOutputAssembly="false" />
 	</ItemGroup>
 
 </Project>
