--- a/src/Saunter/Saunter.csproj
+++ b/src/Saunter/Saunter.csproj
@@ -1,8 +1,7 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
+  <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <IsPackable>true</IsPackable>
     <PackageId>Saunter</PackageId>
     <Title>Saunter</Title>
@@ -32,6 +31,7 @@
 
   <ItemGroup>
     <EmbeddedResource Include="UI/index.html" />
+
     <!-- Note: `npm install` must be run from the src/Saunter.UI directory before building the project to correctly include the UI resources -->
     <!--       this is done automatically in the CI pipeline, but may be skipped when running locally to allow debugging without nodejs      -->
     <EmbeddedResource Include="../Saunter.UI/node_modules/@asyncapi/react-component/browser/standalone/index.js" LogicalName="Saunter.UI.index.js" Condition="Exists('../Saunter.UI/node_modules')" />
@@ -51,15 +51,14 @@
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
-    
+
   <ItemGroup>
     <None Include="..\Saunter.UI\package.json" CopyToOutputDirectory="Never" CopyToPublishDirectory="Never">
       <Link>UI\package.json</Link>
     </None>
   </ItemGroup>
 
-    <ItemGroup>
-        <InternalsVisibleTo Include="Saunter.Tests"/>
-    </ItemGroup>
-    
+  <ItemGroup>
+    <InternalsVisibleTo Include="Saunter.Tests" />
+  </ItemGroup>
 </Project>
