#199 Split attributes out so net standard can be targeted

--- a/src/Saunter/Saunter.csproj
+++ b/src/Saunter/Saunter.csproj
@@ -60,5 +60,9 @@
       <Link>UI\package.json</Link>
     </None>
   </ItemGroup>
-  
+
+  <ItemGroup>
+    <ProjectReference Include="..\AsyncAPI.Saunter.Attributes\AsyncAPI.Saunter.Attributes.csproj" />
+  </ItemGroup>
+
 </Project>
