Base editorconfig + format

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .idea/
 build/
 
+**/Properties/*
 
 # Created by https://www.gitignore.io/api/csharp,jetbrains,visualstudio
 # Edit at https://www.gitignore.io/?templates=csharp,jetbrains,visualstudio
