--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,3 @@
-# Note: ci.yaml and release.yaml have some similar steps
-#       If updating dotnet-version, set in both.
-
 name: CI
 
 on:
@@ -11,29 +8,23 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-    
     steps:
-    - uses: actions/checkout@v3
-
-    - uses: actions/setup-node@v3
-      with:
-        node-version: 'lts/*' # latest LTS version
-    - uses: actions/setup-dotnet@v2
-      with:
-        dotnet-version: '6.0.x' # SDK Version to use; x will use the latest version of the channel
-
-    - name: Run NPM install
-      run: npm ci
-      working-directory: ./src/Saunter.UI
-    - name: Run dotnet build
-      run: dotnet build --configuration Debug
-    - name: Run dotnet test
-      run: dotnet test --no-build
-
-    # Below steps run only on CI, not release
-    - uses: actions/upload-artifact@v2
-      with:
-        name: saunter-bin
-        path: ./src/Saunter/bin
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: "lts/*" # latest LTS version
+      - uses: actions/setup-dotnet@v2
+        with:
+          dotnet-version: "6.0.x" # SDK Version to use; x will use the latest version of the channel
+      - name: Run NPM install
+        run: npm ci
+        working-directory: ./src/Saunter.UI
+      - name: Run dotnet build
+        run: dotnet build --configuration Debug
+      - name: Run dotnet test
+        run: dotnet test --no-build
+      - uses: actions/upload-artifact@v2 # Below steps run only on CI, not release
+        with:
+          name: saunter-bin
+          path: ./src/Saunter/bin
