--- a/.github/workflows/fmt.yaml
+++ b/.github/workflows/fmt.yaml
@@ -15,6 +15,6 @@ jobs:
       - name: Install dotnet-format tool
         run: dotnet tool install -g dotnet-format
       - name: Run dotnet format check
-        run: dotnet format --check
+        run: dotnet format --verify-no-changes *.sln
         env:
           PATH: ${{ github.env.PATH }}:/home/runner/.dotnet/tools
