#196 Publish a global dotnet tool

--- a/.editorconfig
+++ b/.editorconfig
@@ -14,10 +14,12 @@ spelling_exclusion_path = SpellingExclusions.dic
 indent_size = 4
 insert_final_newline = true
 charset = utf-8-bom
+end_of_line = lf
 
 # XML project files
 [*.{csproj,vbproj,vcxproj,vcxproj.filters,proj,projitems,shproj}]
-indent_size = 4
+indent_size = 2
+end_of_line = lf
 
 # XML config files
 [*.{props,targets,ruleset,config,nuspec,resx,vsixmanifest,vsct}]
