--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -22,7 +22,9 @@ jobs:
         node-version: 'lts/*' # latest LTS version
     - uses: actions/setup-dotnet@v2
       with:
-        dotnet-version: '6.0.x' # SDK Version to use; x will use the latest version of the channel
+        dotnet-version: | 
+          6.0.x # SDK Version to use; x will use the latest version of the channel
+          8.0.x
 
     - name: Run NPM install
       run: npm ci
