#197 Produce AsyncAPI documents at build time - test + setup with local nuget source

--- a/examples/StreetlightsAPI/StreetlightsAPI.csproj
+++ b/examples/StreetlightsAPI/StreetlightsAPI.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <IsPackable>false</IsPackable>
+
+    <!-- Example settings for "AsyncAPI.Saunter.Generator.Build", they are all option though -->
     <AsyncAPIGenerateDocumentsOnBuild>true</AsyncAPIGenerateDocumentsOnBuild>
     <AsyncAPIDocumentFormats>json,yml</AsyncAPIDocumentFormats>
     <AsyncAPIDocumentFilename>streetlights.{extension}</AsyncAPIDocumentFilename>
@@ -19,8 +21,28 @@
     <NoWarn>1701;1702;1591</NoWarn>
   </PropertyGroup>
 
+  <!-- Get the latest local build nuget package from source code, from the local nuget packages source as configured in nuget.config -->
+  <ItemGroup Condition=" '$(Configuration)' == 'Debug' ">
+    <PackageReference Include="AsyncAPI.Saunter.Generator.Build" Version="0.0.999-*">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <!-- For release: use a real published nuget package -->
+  <ItemGroup Condition=" '$(Configuration)' == 'Release' ">
+    <PackageReference Include="AsyncAPI.Saunter.Generator.Build" Version="*">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
   <ItemGroup>
     <ProjectReference Include="..\..\src\Saunter\Saunter.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="specs\" />
+  </ItemGroup>
+  
 </Project>
